--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,30 @@
 <html>
+  <head>
+  	<title>
+  		Article One | George Jacob
+  	</title>
+  	<body>
+  		<div>
+  			<a href="/">Home</a>
+  		</div>
+  		<hr/>
+  		<h3>
+  			Article One
+  		</h3>
+  		<div>
+  			Sept 5, 2016
+  		</div>
+  		<div>
+  			<p>
+  				This is the content of my first article. This is the content of my first article. This is the content of my first article. This is the content of my first article.
+  			</p>
+  			<p>
+  				This is the content of my first article. This is the content of my first article. This is the content of my first article. This is the content of my first article.
+  			</p>
+  			<p>
+  				This is the content of my first article. This is the content of my first article. This is the content of my first article. This is the content of my first article.
+  			</p>
+  		</div>
+  	</body>
+  </head>
 </html>
