[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,7 @@
   	<title>
   		Article One | George Jacob
   	</title>
+  <head></head>
   	<body>
   		<div>
   			<a href="/">Home</a>
@@ -26,5 +27,4 @@
   			</p>
   		</div>
   	</body>
-  </head>
 </html>
