[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,7 +3,7 @@
   	<title>
   		Article One | George Jacob
   	</title>
-  <head></head>
+  </head>
   	<body>
   		<div>
   			<a href="/">Home</a>
