--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,2 +1,31 @@
 <html>
+  <head>
+  	<title>
+  		Article Two | George Jacob
+  	</title>
+  	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+  </head>
+  	<body>
+  		<div>
+  			<a href="/">Home</a>
+  		</div>
+  		<hr/>
+  		<h3>
+  			Article Two
+  		</h3>
+  		<div>
+  			Feb 5, 2017
+  		</div>
+  		<div>
+  			<p>
+  				This is the content of my two article. This is the content of my two article. This is the content of my two article. This is the content of my two article.
+  			</p>
+  			<p>
+  				This is the content of my two article. This is the content of my two article. This is the content of my two article. This is the content of my two article.
+  			</p>
+  			<p>
+  				This is the content of my two article. This is the content of my two article. This is the content of my two article. This is the content of my two article.
+  			</p>
+  		</div>
+  	</body>
 </html>
