--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img id="img" src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id='mai-text' class="center text-big bold">
             Hi! I am George Jacob, and this is my first webapp.
             <h4>A new heading</h4>
             I've made some new local changes.
