--- a/ui/index.html
+++ b/ui/index.html
@@ -4,18 +4,26 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+      <div class="container">
         <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
+            <img id="madi" src="https://pbs.twimg.com/profile_images/595054829745016833/fgvAf-q9_bigger.jpg" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div id='main-text' class="center text-big bold">
-            Hi! I am George Jacob, and this is my first webapp.
-            <h4>A new heading</h4>
-            I've made some new local changes.
+        <h3>Personal</h3>
+        <div>
+        	Hi. My name is George Jacob
         </div>
-        <script>
-        	alert('Hi, I\'m Javascript');
-        </script>
+        <hr/>
+        <h3>Professional</h3>
+        <div>
+        	I work at Hasura
+        </div>
+        <hr/>
+        <div class="footer">
+        	
+        </div>
+      </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
