[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -162,7 +162,7 @@ My interests are Programming in C,C++, C#, VB.Net, HTML, CSS, NodeJS</p>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-5x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3><a href="a.html">IMAD Works</a></h3>
+                        <h3><a href="http://georgekunchattil1992.imad.hasura-app.io/works">IMAD Works</a></h3>
                         <p class="text-muted">Works of NPTEL IMAD.</p>
                     </div>
                 </div>
