--- a/ui/index.html
+++ b/ui/index.html
@@ -211,10 +211,9 @@ My interests are Programming in C,C++, C#, VB.Net, HTML, CSS, NodeJS</p>
                 </div>
                 <div class="col-lg-4 text-center">
                    <i class="fa fa-linkedin-square fa-3x" aria-hidden="false" ></i>
-                    <p><a href="https://in.linkedin.com/in/george-jacob-5a440711a">George Jacob</a></p>
+                    <p><a href="https://in.linkedin.com/in/george-jacob-5a440711a" style="color:blue">George Jacob</a></p>
                 </div>
-                <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-                <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="george-jacob-5a440711a"><a class="LI-simple-link" href='https://in.linkedin.com/in/george-jacob-5a440711a?trk=profile-badge'>George Jacob</a></div>
+            
             </div>
         </div>
     </section>
