--- a/ui/index.html
+++ b/ui/index.html
@@ -210,7 +210,7 @@ My interests are Programming in C,C++, C#, VB.Net, HTML, CSS, NodeJS</p>
                     <p><a href="mailto:georgekunchattil@gmail.com">georgekunchattil@gmail.com</a></p>
                 </div>
                 <div class="col-lg-4 text-center">
-                   <i class="fa fa-linkedin-square fa-3x" aria-hidden="false" style="color:blue" ></i>
+                   <i class="fa fa-linkedin-square fa-3x" aria-hidden="false" style="color:#0077b5" ></i>
                     <p><a href="https://in.linkedin.com/in/george-jacob-5a440711a">George Jacob</a></p>
                 </div>
             
