--- a/ui/index.html
+++ b/ui/index.html
@@ -209,7 +209,7 @@ My interests are Programming in C,C++, C#, VB.Net, HTML, CSS, NodeJS</p>
                    <img src="img/gmail-icon.png" width="50px" height="50px" />
                     <p><a href="mailto:georgekunchattil@gmail.com">georgekunchattil@gmail.com</a></p>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-4 col-lg-offset-2 text-center">
                    <i class="fa fa-linkedin-square fa-3x" aria-hidden="false" style="color:#0077b5;" ></i>
                     <p><a href="https://in.linkedin.com/in/george-jacob-5a440711a">George Jacob</a></p>
                 </div>
