[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -212,6 +212,7 @@ My interests are Programming in C,C++, C#, VB.Net, HTML, CSS, NodeJS</p>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
                    <i class="fa fa-linkedin-square fa-3x" aria-hidden="false" style="color:#0077b5;" ></i>
+                   <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="george-jacob-5a440711a"><a class="LI-simple-link" href='https://in.linkedin.com/in/george-jacob-5a440711a?trk=profile-badge'>George Jacob</a></div>
                     <p><a href="https://in.linkedin.com/in/george-jacob-5a440711a">George Jacob</a></p>
                 </div>
             
