--- a/ui/index.html
+++ b/ui/index.html
@@ -166,6 +166,15 @@ My interests are Programming in C,C++, C#, VB.Net, HTML, CSS, NodeJS</p>
                         <p class="text-muted">Works of NPTEL IMAD.</p>
                     </div>
                 </div>
+                
+                <!-- Updates -->
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-cog fa-spin" text-primary sr-icons style="font-size:24px"></i> ">
+                        <h3><a href="/updates">Updatess</a></h3>
+                        <p class="text-muted">Updates of work.</p>
+                    </div>
+                </div>
                 </div>
             </div>
         </div>
