[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -173,7 +173,7 @@ My interests are Programming in C,C++, C#, VB.Net, HTML, CSS, NodeJS</p>
                 <!-- Updates -->
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-cog fa-spin fa-5x" text-primary sr-icons style="font-size:24px"></i>
+                        <i class="fa fa-cog fa-spin " text-primary sr-icons style="font-size:30px"></i>
                         <h3><a href="/updates">Updates</a></h3>
                         <p class="text-muted">Updates of work.</p>
                     </div>
