--- a/ui/index.html
+++ b/ui/index.html
@@ -157,7 +157,7 @@ My interests are Programming in C,C++, C#, VB.Net, HTML, CSS, NodeJS</p>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-camera-retro fa-5x" style="color: #F05F40;"></i> 
-                        <h3>Videos</h3>
+                        <h3><a href="/videos"></a>Videos</h3>
                         <p class="text-muted">Videos of IMAD</p>
                     </div>
                 </div>
