[imad-console] Updates ui/videos.html

--- a/ui/videos.html
+++ b/ui/videos.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Portfolio | George Jacob</title>
+    <title>Videos | George Jacob</title>
     <link rel="icon" href="https://pbs.twimg.com/profile_images/595054829745016833/fgvAf-q9_400x400.jpg">
 
     <!-- Bootstrap Core CSS -->
@@ -111,9 +111,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                 <center><img src="img/profile 2.jpg" class="img-circle" alt="profile"></center>
+                 <!--<center><img src="img/profile 2.jpg" class="img-circle" alt="profile"></center>
                 <h1 id="homeHeading"><center>GEORGE JACOB</h1></center>
-                <hr>
+                <hr>-->
                 
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
