--- a/ui/videos.html
+++ b/ui/videos.html
@@ -90,7 +90,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Home</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#gallery">Gallery</a>
