--- a/ui/videos.html
+++ b/ui/videos.html
@@ -110,7 +110,7 @@
 
     <header>
         <div class="header-content">
-            <div class="header-content-inner">
+            <div >
                  <!--<center><img src="img/profile 2.jpg" class="img-circle" alt="profile"></center>
                 <h1 id="homeHeading"><center>GEORGE JACOB</h1></center>
                 <hr>-->
