[imad-console] Updates ui/videos.html

--- a/ui/videos.html
+++ b/ui/videos.html
@@ -90,7 +90,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">Home</a>
+                        <a class="page-scroll" href="#about"></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#gallery">Gallery</a>
@@ -110,7 +110,7 @@
 
     <header>
         <div class="header-content">
-            <div >
+            <div class="header-content-inner">
                  <!--<center><img src="img/profile 2.jpg" class="img-circle" alt="profile"></center>
                 <h1 id="homeHeading"><center>GEORGE JACOB</h1></center>
                 <hr>-->
