--- a/ui/Links/videos.html
+++ b/ui/Links/videos.html
@@ -110,7 +110,7 @@
 
     <header>
         <div class="header-content">
-            <div class="header-content">
+            <div>
                 
             </div>
         </div>
