[imad-console] Updates ui/Links/videos.html

--- a/ui/Links/videos.html
+++ b/ui/Links/videos.html
@@ -76,7 +76,7 @@
 
 <body id="page-top">
 
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top" style="background-color:#00237b;">
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top" style="background-image:url(../img/header-link.jpg);">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
