--- a/ui/loginpage.html
+++ b/ui/loginpage.html
@@ -1,1 +1,16 @@
-
+<html>
+    <head>
+        <title>Login Page</title>
+    </head>
+    <body>
+        <b>Personal</b> <br>>
+        Hi, I am George Jacob
+        <br>
+        <hr>
+        <b>Professional</b> <br>
+        Hi, I am George Jacob
+        <br>
+        <hr>
+        
+    </body>
+</html>
