[imad-console] Updates ui/loginpage.html

--- a/ui/loginpage.html
+++ b/ui/loginpage.html
@@ -3,7 +3,7 @@
         <title>Login Page</title>
     </head>
     <body>
-        <b>Personal</b> <br>>
+        <b>Personal</b> <br>
         Hi, I am George Jacob
         <br>
         <hr>
