[imad-console] Updates ui/loginpage.html

--- a/ui/loginpage.html
+++ b/ui/loginpage.html
@@ -8,7 +8,7 @@
         <br>
         <hr>
         <b>Professional</b> <br>
-        Hi, I am George Jacob
+        MTech Computer Science & Internet Technologies
         <br>
         <hr>
         
