--- a/ui/loginpage.html
+++ b/ui/loginpage.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Login Page</title>
+        <link href="/ui/stye.css" rel="stylesheet"/>
     </head>
     <body>
         <b>Personal</b> <br>
@@ -11,6 +12,15 @@
         MTech Computer Science & Internet Technologies
         <br>
         <hr>
-        
+        <b>Login to unlock awesome features</b> <br>
+        <div>
+            <input type="text" id="username" placeholder="username"/>
+            <input type="password" id="password"/>
+            <input type="submit" id="submit_btn"/>
+        </div>
+        <hr>
+        <div class="footer">
+            
+        </div>
     </body>
 </html>
