--- a/ui/index.html
+++ b/ui/index.html
@@ -214,7 +214,7 @@ My interests are Programming in C,C++, C#, VB.Net, HTML, CSS, NodeJS</p>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Give a call or send an email and  will get back to you as soon as possible!</p>
+                    <p> Send an email and  will get back to you as soon as possible!</p>
                 </div>
                 <!--
                 <div class="col-lg-4 col-lg-offset-2 text-center">
