[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -222,7 +222,7 @@ My interests are Programming in C,C++, C#, VB.Net, HTML, CSS, NodeJS</p>
                     <p>+919497401217</p>
                 </div>
                 -->
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-4 col-lg-offset-2 text-center">
                    <img src="img/gmail-icon.png" width="50px" height="50px" />
                     <p><a href="mailto:georgekunchattil@gmail.com">georgekunchattil@gmail.com</a></p>
                 </div>
