--- a/ui/project.html
+++ b/ui/project.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.css" media="screen" charset="utf-8">
 
     <!-- Theme CSS -->
-    <link rel="stylesheet" href="css/creative.min.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="css/creative.min[updates].css" media="screen" charset="utf-8">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
