--- a/ui/project.html
+++ b/ui/project.html
@@ -111,8 +111,8 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-               <!--  <center><img src="img/profile 2.jpg" class="img-circle" alt="profile"></center>-->
-                <h1 id="homeHeading" style="color:Blue"><center>Smart Fire Safety</h1></center>
+               <!--  <center><img src="img/profile 2.jpg" class="img-circle" alt="profile"></center>
+                <h1 id="homeHeading" style="color:Blue"><center>Smart Fire Safety</h1></center>-->
                 <hr>
                 
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
