[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -114,8 +114,8 @@
                <!--  <center><img src="img/profile 2.jpg" class="img-circle" alt="profile"></center>
                 <h1 id="homeHeading" style="color:Blue"><center>Smart Fire Safety</h1></center>-->
                 
-                <br><br><br><br>&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <br><br><br><br>
+                <center><a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a></center>
             </div>
         </div>
     </header>
