[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -126,8 +126,9 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">George Jacob</h2>
                     <hr class="light">
-                    <p class="text-faded">I had completed my BE Computer Science & Engineering at Noorul Islam University, Kumarcoil, Thuckalay in Kanyakumari District. I am doing MTech Computer Science with Internet Technologies at Amrita Vishwa Vidyapeetham, Vallikavu in Kollam District. 
-My interests are Programming in C,C++, C#, VB.Net, HTML, CSS, NodeJS</p>
+                    <p class="text-faded">
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScR6bnKmg3qM8zXUScJebdrlo_RrAUNbpRzakWKQzH8SFrXRg/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                    </p>
                     <a href="#gallery" class="page-scroll btn btn-default btn-xl sr-button">Know More!</a>
                 </div>
             </div>
