--- a/ui/project.html
+++ b/ui/project.html
@@ -129,7 +129,7 @@
                     <p class="text-faded">
                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScR6bnKmg3qM8zXUScJebdrlo_RrAUNbpRzakWKQzH8SFrXRg/viewform?embedded=true" width="760" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                     </p>
-                    <a href="#gallery" class="page-scroll btn btn-default btn-xl sr-button">Know More!</a>
+                    <a href="#gallery" class="page-scroll btn btn-default btn-xl sr-button">Play Game</a>
                 </div>
             </div>
         </div>
