--- a/ui/project.html
+++ b/ui/project.html
@@ -125,6 +125,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Smart Fire Safety</h2>
+                       Please complete this assessment before playing the game.
                     <hr class="light">
                     <p class="text-faded">
                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScR6bnKmg3qM8zXUScJebdrlo_RrAUNbpRzakWKQzH8SFrXRg/viewform?embedded=true" width="760" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
