--- a/ui/project.html
+++ b/ui/project.html
@@ -151,7 +151,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         Smart fire
-                        <a href="#gallery" class="page-scroll btn btn-default btn-xl sr-button">Play Game</a>
+                        <a href="#gallery" class="page-scroll btn btn-default btn-xl sr-button">Check Skills</a>
                 </div>
                 
                 
