--- a/ui/project.html
+++ b/ui/project.html
@@ -136,7 +136,7 @@
         </div>
     </section>
 
-    <section id="gallery">
+    <section id="gallery" style="background: lightgreen;>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
