[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -146,7 +146,7 @@
                     <p class="text-faded">
                        
                     </p>
-                    <a href="#gallery" class="page-scroll btn btn-default btn-xl sr-button">Play Game</a>
+                    <a href="#contact" class="page-scroll btn btn-default btn-xl sr-button">Play Game</a>
                 </div>
             </div>
         </div>
