[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -175,7 +175,7 @@
 
     
 
-    <section id="contact" style="background: lightblue;">
+    <section id="contact" style="background: lightblue; display:none">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
