--- a/ui/project.html
+++ b/ui/project.html
@@ -177,7 +177,7 @@
 
     
 
-    <section id="contact" style="background: lightblue; display:none;">
+    <section id="contact" style="background: lightblue;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
