[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -128,7 +128,7 @@
                        Please complete the following assessment before playing the game.
                     <hr class="light">
                     <p class="text-faded">
-                       <div class="embed-responsive ">
+                       <div class="embed-responsive embed-responsive-16by9">
                            <iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLScR6bnKmg3qM8zXUScJebdrlo_RrAUNbpRzakWKQzH8SFrXRg/viewform?embedded=true" width="760" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                        </div>
                     </p>
