[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -83,23 +83,23 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top" style="color:blue;">GEORGE JACOB</a>
+                <a class="navbar-brand page-scroll" href="#page-top" style="color:blue;">SMART FIRE SAFETY</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right"style="color:blue;">
+                <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="btn-primary page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="btn-primary page-scroll" href="#gallery">Gallery</a>
+                        <a class=" page-scroll" href="#gallery">Gallery</a>
                     </li>
                  <!--   <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li> -->
                     <li>
-                        <a class="btn-primary page-scroll" href="#contact">Contact</a>
+                        <a class=" page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
