[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -90,16 +90,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right" style="color:white;">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about" style="color:white;">About</a>
                     </li>
                     <li>
-                        <a class=" page-scroll" href="#gallery">Gallery</a>
+                        <a class=" page-scroll" href="#gallery"style="color:white;">Gallery</a>
                     </li>
                  <!--   <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio" style="color:white;">Portfolio</a>
                     </li> -->
                     <li>
-                        <a class=" page-scroll" href="#contact">Contact</a>
+                        <a class=" page-scroll" href="#contact" style="color:white;">Contact</a>
                     </li>
                 </ul>
             </div>
