--- a/ui/project.html
+++ b/ui/project.html
@@ -88,7 +88,7 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right" style="color:white;">
+                <ul class="nav navbar-nav navbar-right" style="color:white; visibility: hidden;">
                     <li>
                         <a class="page-scroll" href="#about" style="color:white;">About</a>
                     </li>
