--- a/ui/project.html
+++ b/ui/project.html
@@ -81,7 +81,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only" style="display:hidden; color:white;">Toggle navigation</span>  
+                    <span class="sr-only" style="display:hidden; color:white;"></span>  
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top" style="color:blue;">SMART FIRE SAFETY</a>
             </div>
