--- a/ui/project.html
+++ b/ui/project.html
@@ -126,7 +126,7 @@
                        Please complete the following assessment before playing the game.
                     <hr class="light">
                     <p class="text-faded">
-                       <div class="embed-responsive embed-responsive-16by9">
+                       <div class="embed-responsive embed-responsive-16by9" style="width:1274;">
                            
                            <iframe  src="https://docs.google.com/forms/d/e/1FAIpQLSdr5-VPIAKkzuVYy2IkgRkyt7a1cc1Q3ewli7i9RpNzXs3wMw/viewform?embedded=true" width="760" height="760" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                            
