--- a/ui/project.html
+++ b/ui/project.html
@@ -146,7 +146,9 @@
                        Let's Play the game
                     <hr class="light">
                     <p class="text-faded">
-                       
+                       <div>
+                           <iframe  src="build/index.html" width="760" height="760" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                       </div>
                     </p>
                     <a href="#contact" class="page-scroll btn btn-default btn-xl sr-button">Let's Check Skills</a>
                 </div>
