[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -186,7 +186,7 @@
                     <h2 class="section-heading">Let's check our skills from game</h2>
                     <hr class="primary">
                     <p>
-                        <div class="embed-responsive embed-responsive-16by9">
+                        <div>
                           
                            <iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSdEY_7a_XkiCFS-VrT-1rSySheXq2X19KpjOCyCzV4Vro7MyA/viewform?embedded=true" width="760" height="760" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                        </div>
