--- a/ui/project.html
+++ b/ui/project.html
@@ -188,7 +188,7 @@
                     <p>
                         <div>
                           
-                           <iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSdEY_7a_XkiCFS-VrT-1rSySheXq2X19KpjOCyCzV4Vro7MyA/viewform?embedded=true" width="760" height="760" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdEY_7a_XkiCFS-VrT-1rSySheXq2X19KpjOCyCzV4Vro7MyA/viewform?embedded=true" width="760" height="760" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                        </div>
                         
                     </p>
