--- a/ui/project.html
+++ b/ui/project.html
@@ -149,7 +149,7 @@
                        
                     </p>
                     <div>
-                           <iframe  src="http://htmlpreview.github.io/?https://github.com/georgekunchattil1992/FireSafety/blob/master/index.html" width="760" height="760" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                           <iframe  src="http://htmlpreview.github.io/?https://github.com/georgekunchattil1992/FireSafety/blob/master/index.html"frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                        </div>
                     <a href="#contact" class="page-scroll btn btn-default btn-xl sr-button">Let's Check Skills</a>
                 </div>
