--- a/ui/project.html
+++ b/ui/project.html
@@ -128,7 +128,7 @@
                     <p class="text-faded">
                        <div class="span3 offset2">
                            
-                           <iframe  src="https://docs.google.com/forms/d/e/1FAIpQLSdr5-VPIAKkzuVYy2IkgRkyt7a1cc1Q3ewli7i9RpNzXs3wMw/viewform?embedded=true" width="760" height="760" frameborder="0" marginheight="5" marginwidth="5">Loading...</iframe>
+                           <iframe  src="https://docs.google.com/forms/d/e/1FAIpQLSdr5-VPIAKkzuVYy2IkgRkyt7a1cc1Q3ewli7i9RpNzXs3wMw/viewform?embedded=true"  height="760" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                            
                        </div>
                     </p>
