--- a/ui/project.html
+++ b/ui/project.html
@@ -148,7 +148,7 @@
                     <p class="text-faded">
                        
                     </p>
-                    <div class="bg-primary">
+                    <div class="col-lg-8 col-md-4">
                            <iframe  src="https://htmlpreview.github.io/?https://github.com/georgekunchattil1992/FireSafety/blob/master/index.html"frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                        </div>
                     <a href="#contact" class="page-scroll btn btn-default btn-xl sr-button">Let's Check Skills</a>
