[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -126,7 +126,7 @@
                        Please complete the following assessment before playing the game.
                     <hr class="light">
                     <p class="text-faded">
-                       <div class=col-lg-8 col-md-4">
+                       <div class="col-lg-8 col-md-4">
                            
                            <iframe  src="https://docs.google.com/forms/d/e/1FAIpQLSdr5-VPIAKkzuVYy2IkgRkyt7a1cc1Q3ewli7i9RpNzXs3wMw/viewform?embedded=true"  height="760" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                            
