--- a/ui/project.html
+++ b/ui/project.html
@@ -128,7 +128,7 @@
                     <p class="text-faded">
                        <div>
                            
-                           <iframe  class="embed-responsive-item"src="https://docs.google.com/forms/d/e/1FAIpQLSdr5-VPIAKkzuVYy2IkgRkyt7a1cc1Q3ewli7i9RpNzXs3wMw/viewform?embedded=true"  style="width:300px; height:760px;" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                           <iframe  class="embed-responsive-item"src="https://docs.google.com/forms/d/e/1FAIpQLSdr5-VPIAKkzuVYy2IkgRkyt7a1cc1Q3ewli7i9RpNzXs3wMw/viewform?embedded=true"  style ="max-width: 100%;height:100%;" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                            
                        </div>
                     </p>
