--- a/ui/project.html
+++ b/ui/project.html
@@ -149,7 +149,7 @@
                        
                     </p>
                     <div>
-                           <iframe  class="embed-responsive-item" src="https://htmlpreview.github.io/?https://github.com/georgekunchattil1992/FireSafety/blob/master/index.html" style ="max-width: 300%;height:300%;" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                           <iframe  class="embed-responsive-item" src="https://htmlpreview.github.io/?https://github.com/georgekunchattil1992/FireSafety/blob/master/index.html" style ="max-width:1024px;height:768px;" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                        </div>
                     <a href="#contact" class="page-scroll btn btn-default btn-xl sr-button">Let's Check Skills</a>
                 </div>
