[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Portfolio | George Jacob</title>
+    <title> Smart Fire Safety</title>
     <link rel="icon" href="https://pbs.twimg.com/profile_images/595054829745016833/fgvAf-q9_400x400.jpg">
 
     <!-- Bootstrap Core CSS -->
