--- a/ui/project.html
+++ b/ui/project.html
@@ -189,7 +189,7 @@
                     <p>
                         <div class="row">
                           
-                           <iframe class="embed-responsive-item"src="https://docs.google.com/forms/d/e/1FAIpQLSdEY_7a_XkiCFS-VrT-1rSySheXq2X19KpjOCyCzV4Vro7MyA/viewform?embedded=true" style ="max-width: 100%;height:100%;" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdEY_7a_XkiCFS-VrT-1rSySheXq2X19KpjOCyCzV4Vro7MyA/viewform?embedded=true" style ="max-width: 100%;height:100%;" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                        </div>
                         
                     </p>
