--- a/ui/project.html
+++ b/ui/project.html
@@ -144,7 +144,7 @@
                     <hr class="light">
 
                     <div style="align:center;">
-                           <iframe  src="https://georgekunchattil1992.github.io/" style ="width:1024px;height:768px;" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                           <iframe  src="https://georgekunchattil1992.github.io" style ="width:1024px;height:768px;embedded:true;" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                        </div>
                     <a href="#contact" class="page-scroll btn btn-default btn-xl sr-button">Let's Check Skills</a>
                 </div>
