--- a/ui/project.html
+++ b/ui/project.html
@@ -143,7 +143,7 @@
                        Let's Play the game
                     <hr class="light">
 
-                    <div style="align:center;">
+                    <div>
                            <iframe  src="https://georgekunchattil1992.github.io" style ="width:1024px;height:768px;embedded:true;" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                        </div>
                     <a href="#contact" class="page-scroll btn btn-default btn-xl sr-button">Let's Check Skills</a>
