[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -144,7 +144,7 @@
                     <hr class="light">
 
                     <div>
-                           <iframe  src="https://georgekunchattil1992.github.io" style ="width:1024px;height:768px;embedded:true;" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                           <iframe  src="https://georgekunchattil1992.github.io/index.html" style ="width:873px;height:633px;" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                        </div>
                     <a href="#contact" class="page-scroll btn btn-default btn-xl sr-button">Let's Check Skills</a>
                 </div>
