[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -142,7 +142,9 @@
                     <h2 class="section-heading">Smart Fire Safety Game</h2>
                        Let's Play the game
                     <hr class="light">
-
+                    <p class="text-faded">
+                        This game does not support in mobiles. If there is any issue in loading the game, just refresh the page or press F5.
+                    </p>
                     <div>
                            <iframe  src="https://georgekunchattil1992.github.io/index.html" style ="width:873px;height:633px;" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                        </div>
@@ -193,6 +195,9 @@
              
             
             </div>
+        </div>
+        <div class="container" style ="background-color:black;color:white;">
+            Best view in 1024px x 768px resolution size
         </div>
     </section>
 
