[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -198,7 +198,7 @@
         </div>
         
     </section>
-    <div class="container" style ="background-color:black;color:white;">
+    <div  style ="background-color:black;color:white;">
             Best view in 1024px x 768px resolution size
         </div>
 
