[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -139,10 +139,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Smart Fire Safety Game</h2>
+                    <h2 class="section-heading"><b>Smart Fire Safety Game</b></h2>
                        Let's Play the game
                     <hr class="light">
-                    <p class="text-faded">
+                    <p class="text-faded" style="color:black">
                         This game does not support in mobiles. If there is any issue in loading the game, just refresh the page or press F5.
                     </p>
                     <div>
