[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -199,7 +199,7 @@
         
     </section>
     <div  style ="background-color:black;color:white;">
-            Best view in 1024px x 768px resolution size
+            <center><h4>Best view in 1024px x 768px resolution size</h4></center>
         </div>
 
     <!-- jQuery -->
