[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -198,9 +198,11 @@
         </div>
         
     </section>
-    <div  style ="background-color:black;color:white;">
+    <section>
+        <div  style ="background-color:black;color:white;">
             <center><h4>Best view in 1024px x 768px resolution size</h4></center>
         </div>
+    </section>
 
     <!-- jQuery -->
     <script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
