[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -197,7 +197,7 @@
             </div>
         </div>
         <div  style ="background-color:black;color:white;">
-            <center><h4>Best view in 1024px x 768px resolution size</h></center>
+            <center><h4>Best view in 1024px x 768px resolution size</h4></center>
         </div>
     </section>
     
