[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -197,8 +197,8 @@
             </div>
         </div>
     </section>
-    <footer  style ="background-color:black;color:white;">
-            <center><h4>Best view in 1024px x 768px resolution size</h4></center>
+    <footer  style ="background-color:black;color:white;"><br>
+            <center><h4>Best view in 1024px x 768px resolution size</h4></center><br>
         </footer>
 
     <!-- jQuery -->
