[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -78,7 +78,7 @@ This game does not support in mobiles. If there is any issue in loading the game
 <div>
 <iframe src=https://georgekunchattil1992.github.io/index.html style=width:873px;height:633px scrolling=no frameborder=0 marginheight=0 marginwidth=0>Loading...</iframe>
 </div>
-<a href=#contact class="page-scroll btn btn-default btn-xl sr-button">Let's Check Skills</a>
+<br><a href=#contact class="page-scroll btn btn-default btn-xl sr-button">Let's Check Skills</a>
 </div>
 </div>
 </div>
