--- a/ui/project.html
+++ b/ui/project.html
@@ -60,7 +60,7 @@ Please complete the following assessment before playing the game.
 <div>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdr5-VPIAKkzuVYy2IkgRkyt7a1cc1Q3ewli7i9RpNzXs3wMw/viewform?embedded=true" width=800 height=800 frameborder=0 marginheight=0 marginwidth=0>Loading...</iframe>
 </div>
-<a href=#gallery class="page-scroll btn btn-default btn-xl sr-button">Play Game</a>
+<br><a href=#gallery class="page-scroll btn btn-default btn-xl sr-button">Play Game</a>
 </div>
 </div>
 </div>
