[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,26 +1,26 @@
 <html>
-  <head>
-  	<title>
-  		Article Three | George Jacob
-  	</title>
-  	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link href="/ui/style.css" rel="stylesheet" />
-  </head>
-  	<body>
-  		<div>
-  			<a href="/">Home</a>
-  		</div>
-  		<hr/>
-  		<h3>
-  			Article Three
-  		</h3>
-  		<div>
-  			Feb 15, 2017
-  		</div>
-  		<div>
-  			<p>
-  				This is the content of my third article. This is the content of my third article. This is the content of my third article. This is the content of my two article.
-  			</p>
-  		</div>
-  	</body>
+<head>
+<title>
+Article Three | George Jacob
+</title>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<link href="/ui/style.css" rel="stylesheet" />
+</head>
+<body>
+<div>
+<a href="/">Home</a>
+</div>
+<hr/>
+<h3>
+Article Three
+</h3>
+<div>
+Feb 15, 2017
+</div>
+<div>
+<p>
+This is the content of my third article. This is the content of my third article. This is the content of my third article. This is the content of my third article.
+</p>
+</div>
+</body>
 </html>
