[imad-console] Updates ui/project.html

--- a/ui/project.html
+++ b/ui/project.html
@@ -7,7 +7,7 @@
 <meta name=description content>
 <meta name=author content>
 <title> Smart Fire Safety</title>
-<link rel=icon href=https://pbs.twimg.com/profile_images/595054829745016833/fgvAf-q9_400x400.jpg>
+<link rel=icon href=ui/img/fire extinguisher.jpg>
 <link rel=stylesheet href=vendor/bootstrap/css/bootstrap.min.css media=screen charset=utf-8>
 <link rel=stylesheet href=vendor/font-awesome/css/font-awesome.min.css media=screen charset=utf-8>
 <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" media=screen charset=utf-8>
