[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -68,6 +68,18 @@ My interests are Programming in C,C++, C#, VB.Net, HTML, CSS, NodeJS</p>
 </div>
 </div>
 </section>
+
+<section id=Blog style=background:lightblue>
+<div class=container>
+<div class=row>
+<div class="col-lg-8 col-lg-offset-2 text-center">
+
+</div>
+
+</div>
+</div>
+</section>
+
 <section id=gallery>
 <div class=container>
 <div class=row>
